navbar  added in html page

--- a/css/main.css
+++ b/css/main.css
@@ -597,6 +597,18 @@ video {
   margin-right: auto;
 }
 
+.flex {
+  display: flex;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
@@ -604,4 +616,8 @@ video {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
 }                             
